# rosbag_record_gui

./: CMakeLists.txt  README.md  package.xml  record_bag_gui.py  setup.py
backend/: __init__.py  guibackend.py  topichandler.py
scripts/: record_gui  record_gui.py
src/rosbag_record_gui/: gui.py
src/rosbag_record_gui/backend/: __init__.py
src/rosbag_record_gui/widgets/: __init__.py  menu_bar.py  plot_topic_times_widget.py  record_button_widget.py  select_bag_save_folder_widget.py  topic_selection_tree_widget.py
widgets/: __init__.py  plot_bag_widget.py  plot_topic_times_widget.py  record_buttons_widget.py  status_label_widget.py  topic_selection_tree_widget.py
